<resources>
    <string name="app_name">Effective Mobile Tickets</string>

    <!-- bottom_nav_menu -->
    <string name="avia_tickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="nearest">Короче</string>
    <string name="subscriptions">Подписки</string>
    <string name="user_profile">Профиль</string>

    <!-- AviaTicketsMainFragment -->
    <string name="downloading_error">Downloading error, %1$s</string>

    <!-- AviaTicketsSearchBottomSheetFragment -->
    <string name="complex_route">Сложный\nмаршрут</string>
    <string name="to_anywhere">Куда угодно</string>
    <string name="weekend">Выходные</string>
    <string name="hot_tickets">Горячие\nбилеты</string>


</resources>