<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/aviaTicketsFragment"
        android:title="@string/avia_tickets"
        android:icon="@drawable/ic_narrow_plane" />
    <item android:id="@+id/hotelsFragment"
        android:title="@string/hotels"
        android:icon="@drawable/ic_hotel" />
    <item android:id="@+id/korocheFragment"
        android:title="@string/nearest"
        android:icon="@drawable/ic_koroche" />
    <item android:id="@+id/subscriptionsFragment"
        android:title="@string/subscriptions"
        android:icon="@drawable/ic_subscriptions" />
    <item android:id="@+id/userProfileFragment"
        android:title="@string/user_profile"
        android:icon="@drawable/ic_user_profile" />
</menu>